--- a/shopping/index.ejs
+++ b/shopping/index.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <title>电商网站示例</title>
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
 </head>
-<body>
+
+<body onselectstart="return false" style="-moz-user-select:none">
     <div id="app"></div>
     <script type="text/javascript" src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
 </body>
-</html> 
+
+</html>
